--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
         <version>1.554.3</version><!-- which version of Jenkins is this plugin built against? -->
     </parent>
 
-    <name>External Data Plugin</name>
-    <artifactId>external-data</artifactId>
+    <name>Compatability Action Storage Plugin</name>
+    <artifactId>compatability-action-storage</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/External+Data+Plugin</url>
+    <url>https://wiki.jenkins-ci.org/display/JENKINS/Compatability+Action+Storage+Plugin</url>
     
     <developers>
         <developer>
