--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <version>1.554.3</version><!-- which version of Jenkins is this plugin built against? -->
     </parent>
 
-    <name>Compatability Action Storage Plugin</name>
+    <name>Compatibility Action Storage Plugin</name>
     <artifactId>compatability-action-storage</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
